--- a/liquibase.properties
+++ b/liquibase.properties
@@ -20,16 +20,16 @@
 ##      The url H2 example below is relative to 'pwd' resource.
 ####
 # Enter the path for your changelog file.
-changeLogFile=example-changelog.sql
+changeLogFile=root-changelog.xml
 
 #### Enter the Target database 'url' information  ####
-liquibase.command.url=jdbc:h2:tcp://localhost:9090/mem:dev
+liquibase.command.url=jdbc:mysql://localhost:3306/db_versioning
 
 # Enter the username for your Target database.
-liquibase.command.username: dbuser
+liquibase.command.username: root
 
 # Enter the password for your Target database.
-liquibase.command.password: letmein
+liquibase.command.password: Nishith@2023
 
 #### Enter the Source Database 'referenceUrl' information ####
 ## The source database is the baseline or reference against which your target database is compared for diff/diffchangelog commands.
