--- a/liquibase.properties
+++ b/liquibase.properties
@@ -20,7 +20,7 @@
 ##      The url H2 example below is relative to 'pwd' resource.
 ####
 # Enter the path for your changelog file.
-changeLogFile=root-changelog.xml
+changeLogFile=root_changelog.xml
 
 #### Enter the Target database 'url' information  ####
 liquibase.command.url=jdbc:mysql://localhost:3306/db_versioning
@@ -61,3 +61,5 @@ liquibase.command.referencePassword: letmein
 ##  Get documentation at docs.liquibase.com       ##
 ##  Get certified courses at learn.liquibase.com  ##
 ##  Get support at liquibase.com/support         ##
+classpath=/usr/share/java/mysql-connector-j-8.3.0.jar
+searchPath=com/
